--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@salla.sa/admin-ui-react": "^1.9.13",
+    "@tailwindcss/vite": "^4.0.14",
+    "clsx": "^2.1.1",
+    "i18next": "^24.2.3",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.4.0",
+    "tailwindcss": "^4.0.14",
+    "tailwindcss-rtl": "^0.9.0",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
